fixed an issue with alignment

--- a/Client/src/features/HeaderRegLogin/Header.css
+++ b/Client/src/features/HeaderRegLogin/Header.css
@@ -1,11 +1,10 @@
 .header-body {
-  width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -29,7 +28,6 @@
   justify-content: space-between;
 }
 .header-text {
-  padding-top: 4px;
   font-size: 28px;
 }
 .header-login {
